<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.edgequake</groupId>
    <artifactId>edgequake-sdk</artifactId>
    <version>0.1.0</version>
    <packaging>jar</packaging>

    <name>EdgeQuake Java SDK</name>
    <description>Java SDK for the EdgeQuake RAG API</description>
    <url>https://github.com/edgequake/edgequake</url>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jackson.version>2.18.3</jackson.version>
        <junit.version>5.11.3</junit.version>
        <!-- WHY: property-backed so CLI can override with -Dtest.excludedGroups= -->
        <test.excludedGroups>e2e</test.excludedGroups>
        <test.groups />
    </properties>

    <dependencies>
        <!-- JSON serialization -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <!-- WHY: E2E tests require a live backend, so exclude by default.
                         Run with: mvn test -Dtest.excludedGroups= -Dtest.groups=e2e -->
                    <excludedGroups>${test.excludedGroups}</excludedGroups>
                    <groups>${test.groups}</groups>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <groups>e2e</groups>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>e2e</id>
            <properties>
                <test.groups>e2e</test.groups>
                <test.excludedGroups />
            </properties>
        </profile>
    </profiles>
</project>
